data/_debug/test_gj_20260519_0926.log
  File "/home/runner/work/product-dashboard/product-dashboard/scripts/test_gj.py", line 41
    print(f"
          ^
SyntaxError: unterminated f-string literal (detected at line 41)
